# EfiBootGUI

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  efibootmgrgui.desktop
polkit/: org.xerolinux.efibootmgrgui.policy
qml/: BootEntryDelegate.qml  main.qml
src/: bootentry.cpp  bootentry.h  bootmanager.cpp  bootmanager.h  main.cpp
